# safl.github.com

./: .gitignore  LICENSE  Makefile  README.md  README.rst  conf.py  dev-requirements.txt  index.html  index.md  params.json  pylsp.rst
.github/workflows/: docs.yml
_layouts/: default.html
_static/: blue8bit.css
_themes/blue8bit/: blue8bit.css  layout.html  theme.conf
about/: index.html  index.md
backdrops/: LICENSE  README.rst
cv/: index.md
docs/: .buildinfo  CNAME  Makefile  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  siteindex.html
docs/.doctrees/: index.doctree  siteindex.doctree
docs/.doctrees/about/: index.doctree
docs/.doctrees/cv/: index.doctree
docs/.doctrees/notebook/: index.doctree  matrix.doctree
docs/.doctrees/projects/: index.doctree
docs/_sources/: index.rst.txt  siteindex.rst.txt
docs/_static/: blue8bit.css
docs/about/: index.html
docs/cv/: index.html
docs/notebook/: index.html  matrix.html
docs/projects/: index.html
docs/src/: CNAME  conf.py  index.md  siteindex.md
docs/src/about/: index.md
docs/tooling/: README.md  pyproject.toml
docs/tooling/src/safldk_docs/: __init__.py  cli.py
docs/uni/: index.html
dotfiles/: README.rst
dotfiles/etc/: environment
dotfiles/home/: .Xresources
dotfiles/vim/: .vimrc
notebook/: hue.py  index.md  parseology.md
projects/: index.md
site/about/: index.rst
site/notebook/: 3dprint.rst  index.rst  matrix.rst  mutagen.rst  pikvm.rst
site/projects/: index.rst
site/uni/: index.rst
stylesheets/: pixel.elements.css  pixel.style.css
(+256 files in other folders)
