[project]
name = "safldk-docs"
version = "0.1.0"
description = "Documentation build tooling for safl.dk"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Simon A. F. Lund", email = "os@safl.dk" }]
license = "BSD-3-Clause"
dependencies = [
    "sphinx>=8",
    "myst-parser[linkify]>=4",
    "sphinx-copybutton>=0.5",
    "sphinx-autobuild>=2024.10",
]

[project.scripts]
safldk-docs-serve = "safldk_docs.cli:serve"
safldk-docs-build-html = "safldk_docs.cli:build_html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/safldk_docs"]
